# quitter

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  fly.toml
api/: Cargo.toml  sqlx-data.json
api/migrations/: 20260116000001_create_habits_table.sql  20260116000002_add_slug_to_habits.sql  20260117000003_create_themes.sql  20260117000004_refactor_habit_model.sql
api/src/: main.rs
frontend/: Cargo.toml  README.md  index.html  style.css
frontend/src/: components.rs  lib.rs  model.rs  store.rs
shared/: Cargo.toml  build.rs
shared/proto/: tracker.proto
shared/src/: debug_hash.rs  lib.rs
