[package]
name = "addict_tracker"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
gloo-storage = "0.3"
wasm-bindgen = "0.2"
uuid = { version = "1.19.0", features = ["v4", "js", "serde"] }
web-sys = { version = "0.3.85", features = ["Clipboard", "History", "Location", "Navigator", "Window"] }
gloo-timers = "0.3.0"
shared = { version = "0.1.0", path = "../shared" }
prost = "0.14.3"
base64 = "0.22.1"
gloo-net = "0.6.0"
wasm-bindgen-futures = "0.4.58"
js-sys = "0.3.85"

[dev-dependencies]
wasm-bindgen-test = "0.3.58"
