[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
base64 = "0.22.1"

[build-dependencies]
prost-build = "0.14"
